Text-only template: Fix padding on mobile (fixes #473)

--- a/templates/text-only/styles.css
+++ b/templates/text-only/styles.css
@@ -48,6 +48,7 @@ html, body {
   flex-grow: 1;
   padding: 0;
   color: inherit;
+  width: calc(100% - 80px);
 }
 .mdl-demo.mdl-demo .mdl-card__supporting-text h4 {
   margin-top: 0;
